# Computer_network

./: .gitignore  readme.md
SMTP_Lab/: .gitignore  CMakeLists.txt  QQ_SMTP_ip.md  deploy.sh  readme.md  send_message.sh
SMTP_Lab/include/: utils.h
SMTP_Lab/reference/: demo1.py  demo2.py  ssl.cpp  ssl_completed.cpp
SMTP_Lab/src/: SMTP_client.cpp  debug.cpp  test_server.cpp  utils.cpp
project1/: build.sh
project1/demo/: client.cpp  server.cpp
project1/py_src/: client.py  client_tcp.py  server.py  server_tcp.py
project1/src/: client.cpp  server.cpp
proxy_server/: .gitignore  CMakeLists.txt  build.sh  readme.md
proxy_server/include/: common.hpp  proxy_server.hpp  utils.hpp
proxy_server/reference/: request_template
proxy_server/saves/: HelloWorld.html  main.cpp
proxy_server/src/: debug.cpp  main.cpp  proxy_server.cpp  utils.cpp
udp_pinger/: CMakeLists.txt  build.sh  deploy.sh  ping.sh  readme.md
udp_pinger/reference/: client  client.cpp  server  server.cpp
udp_pinger/src/: demo.cpp  udp_pinger.cpp  udp_server.cpp
web_server/: CMakeLists.txt  build.sh  deploy.sh  readme.md  request.sh
web_server/.cache/clangd/index/: check.cpp.4AA4080FEFD4DA3A.idx  debug.cpp.9C22AA860BF29E8B.idx  demo.cpp.6003DEECB52B2A72.idx  web_server.cpp.6C78867D4AEBB8B2.idx
web_server/reference/: web_server.cpp  web_server.py
web_server/src/: check.cpp  debug.cpp  web_client.cpp  web_server.cpp
